--- a/training-kubebuilder/config/default/webhookcainjection_patch.yaml
+++ b/training-kubebuilder/config/default/webhookcainjection_patch.yaml
@@ -4,7 +4,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   labels:
-    app.kubernetes.io/name: training-kubebuilder
+    app.kubernetes.io/name: markdown-view
     app.kubernetes.io/managed-by: kustomize
   name: mutating-webhook-configuration
   annotations:
@@ -17,8 +17,8 @@ metadata:
     app.kubernetes.io/name: validatingwebhookconfiguration
     app.kubernetes.io/instance: validating-webhook-configuration
     app.kubernetes.io/component: webhook
-    app.kubernetes.io/created-by: training-kubebuilder
-    app.kubernetes.io/part-of: training-kubebuilder
+    app.kubernetes.io/created-by: markdown-view
+    app.kubernetes.io/part-of: markdown-view
     app.kubernetes.io/managed-by: kustomize
   name: validating-webhook-configuration
   annotations:
