--- a/training-kubebuilder/config/rbac/markdownview_viewer_role.yaml
+++ b/training-kubebuilder/config/rbac/markdownview_viewer_role.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: training-kubebuilder
+    app.kubernetes.io/name: markdown-view
     app.kubernetes.io/managed-by: kustomize
   name: markdownview-viewer-role
 rules:
