--- a/training-kubebuilder/config/rbac/service_account.yaml
+++ b/training-kubebuilder/config/rbac/service_account.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/name: training-kubebuilder
+    app.kubernetes.io/name: markdown-view
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager
   namespace: system
